--- a/WebAPIFichasDomino/WebAPIFichasDomino.csproj
+++ b/WebAPIFichasDomino/WebAPIFichasDomino.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.27" />
     <PackageReference Include="NewRelic.Agent.Api" Version="10.21.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
