--- a/WebAPIFichasDomino/appsettings.json
+++ b/WebAPIFichasDomino/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "LlaveJWT": "LlaveJWT-JuanPolania-Inalambria-*123423746237347856736578",
   "AllowedHosts": "*"
 }
